--- a/source/Swab2.csproj
+++ b/source/Swab2.csproj
@@ -112,6 +112,9 @@
   <ItemGroup>
     <None Include="Resources\Template.html" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\setting.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
